[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.119.0",
    "python-dotenv>=1.1.1",
    "python-telegram-bot==20.8",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
